<resources>
    <string name="fileprovider_authority" translatable="false">com.thugdroid.memeking.fileprovider</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-9748043686099228~2079966023</string>
    <string name="admob_template_list_banner_id" translatable="false">ca-app-pub-9748043686099228/5444495969</string>
    <string name="admob_save_without_ads_rewardedad_id" translatable="false">ca-app-pub-9748043686099228/4714895890</string>
    <string name="admob_save_meme_interstitial" translatable="false">ca-app-pub-9748043686099228/3836928494</string>
    <string name="app_name">MemeKing</string>
    <string name="app_name_with_space">Meme King</string>
    <string name="home">Home</string>
    <string name="template">Template</string>
    <string name="create_meme">Create meme</string>
    <string name="create_collage">Create collage</string>
    <string name="create_meme_to_post_it">Create a meme to post it</string>
    <string name="template_categories">Template Categories</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="my_templates">My Templates</string>
    <string name="sign_out">Sign Out</string>
    <string name="upload_template">Upload Template</string>
    <string name="upload">Upload</string>
    <string name="upload_meme">Upload Meme</string>
    <string name="update_template">Update Template</string>
    <string name="enter_search_tags_here">Enter search tags for template as comma separated values</string>
    <string name="add_template">Add Template</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="favourite">Favourite</string>
    <string name="unfavourite">UnFavorite</string>
    <string name="download">Download</string>
    <string name="back">Back</string>
    <string name="search_here">Search here</string>
    <string name="signin_title">Welcome to Meme King</string>
    <string name="signin_subtitle">Sign in required to be access this app.We don\'t send any spam mail after Sign In</string>
    <string name="select_your_region">Select your region</string>
    <string name="select_region_subtitle">Meme templates will be shown based on your region\'s movie industry.</string>
    <string name="next">Next</string>
    <string name="export">Export</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="text">Text</string>
    <string name="neww">New</string>
    <string name="edit">Edit</string>
    <string name="defaultFont">Font</string>
    <string name="background_short">BG</string>
    <string name="outline">Outline</string>
    <string name="size">Size</string>
    <string name="add">Add</string>
    <string name="image">Image</string>
    <string name="sticker">Sticker</string>
    <string name="colour">Colour</string>
    <string name="ok">Ok</string>
    <string name="enter_text">Enter text</string>
    <string name="choose_font">Choose default font</string>
    <string name="text_size">Text size</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="something_went_wrong">Something went wrong. Please try again later</string>
    <string name="failed_to_share">Failed to share</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong_please_try_again">Something went wrong. Please try again.</string>
    <string name="something_went_wrong_while_uploading_meme">Something went wrong while uploading meme. Please try again.</string>
    <string name="can_t_favorite_template_try_again">Can\'t favorite the template,Please try again</string>
    <string name="can_t_unfavorite_template_try_again">Can\'t unfavorite the template,Please try again</string>
    <string name="enter_desc_of_this_template">Enter a description for this template</string>
    <string name="jpg_png_images_allowed">.jpg / .png images are allowed</string>
    <string name="allow_permission_to_choose_image">Allow Meme King to access photos and media from your device.</string>
    <string name="please_choose_image">Please choose an image of template</string>
    <string name="please_enter_valid_searchtag">Please enter valid search tags for this template</string>
    <string name="cant_upload_template_try_again">Cannot upload template. Please try again</string>
    <string name="cant_update_template_try_again">Cannot update template. Please try again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_change_template_image">Do you want to change this template image?</string>
    <string name="you_cant_change_template_image">You cannot change this image in edit mode</string>
    <string name="template_verification_under_progress">Template verification under progress.You will be notified, once your template got verified!</string>
    <string name="template_updated_successfully">Template updated successfully!</string>
    <string name="change_region">Change region</string>
    <string name="instagram_username">Instagram username</string>
    <string name="get_your_credits_on_templates_and_memes">Get your credits on templates and memes that you uploaded</string>
    <string name="choose_grid">Choose grid</string>
    <string name="please_add_or_seletct_text">Please add/select a text</string>
    <string name="select_text_color">Select text color</string>
    <string name="select_background_color">Select background color</string>
    <string name="select_outline_color">Select text outline color</string>
    <string name="text_outline_size">Text outline size</string>
    <string name="more_info">More info</string>
    <string name="report">Report</string>
    <string name="preview">Preview</string>
    <string name="no_meme_templates_found">No meme templates found</string>
    <string name="no_memes_found">No memes found</string>
    <string name="allow_permission_to_save_template">Allow access to save template to device</string>
    <string name="template_saved_successfully">Template saved successfully!</string>
    <string name="meme_saved_successfully">Meme saved successfully!</string>
    <string name="cant_save_template">Cannot save template</string>
    <string name="cant_save_search_tags">Cannot save the search tags</string>
    <string name="searchtag_updates_successfully">Search tag(s) updated successfully</string>
    <string name="cant_delete_template_now">Cannot delete this template now, please try again later</string>
    <string name="allow_permission_to_save_meme">Allow access to save meme to device</string>
    <string name="allow_permission_to_share_meme">Grant permission to Meme King to share meme</string>
    <string name="meme_save_success">Meme saved successfully!</string>
    <string name="cant_save_meme">Cannot save meme. Please try again</string>
    <string name="cant_share_meme">Cannot share meme. Please try again</string>
    <string name="tell_us_what_it_seems_like">Tell us, what it seems like</string>
    <string name="it_s_spam">It\'s a spam</string>
    <string name="it_s_inappropriate">It is inappropriate</string>
    <string name="cancel">Cancel</string>
    <string name="template_reported_successfully">The template has been reported successfully. Our team will look into it.Thank you</string>
    <string name="meme_reported_successfully">Meme has been reported successfully. Our team will look into it.Thank you</string>
    <string name="search">Search</string>
    <string name="search_movies_dialogues">Search movies,dialogues and characters</string>
    <string name="search_in_x">Search in %1$s</string>
    <string name="search_my_templates">Search My templates</string>
    <string name="seach_favorite_templates">Search Favourite templates</string>
    <string name="enter_atlease_x_letter">Please enter atleast %1$d letter(s)</string>
    <string name="settings">Settings</string>
    <string name="set_logo">Set your logo</string>
    <string name="signout_confirmation">Do you want to sign out?</string>
    <string name="logo">Logo</string>
    <string name="there_are_some_unsaved_changes">There are some unsaved changes, do you want to go back?</string>
    <string name="search_tags_description">Ex: Movie name, Character names, Dialogues</string>
    <string name="signing_out_dots">Signing out...</string>
    <string name="signing_in_dots">Signing in...</string>
    <string name="updating_template_dots">Updating template...</string>
    <string name="deleting_template_dots">Deleting template...</string>
    <string name="uploading_dots">Uploading...</string>
    <string name="updating_dots">Updating...</string>
    <string name="walkthrough_category_title">Change category</string>
    <string name="walkthrough_category_desc">Click here to change category</string>
    <string name="walkthrough_creatememe_title">Create Meme</string>
    <string name="walkthrough_creatememe_desc">Click here to create meme</string>
    <string name="walkthrough_change_image_title">Change image - Long press</string>
    <string name="walkthrough_change_image_desc">Long press to change image</string>
    <string name="walkthrough_add_caption_title">Add captions </string>
    <string name="walkthrough_add_caption_desc">Click here to add captions</string>
    <string name="walkthrough_zoom_image_title">Zoom - pinch</string>
    <string name="walkthrough_zoom_image_desc">Pinch to zoom</string>
    <string name="image_border">Image Border</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="add_image_to_choose_border">Please add an image to choose border</string>
    <string name="set_border_to_choose_border_color">Set image border to choose border color</string>
    <string name="select_border_color">Select border color</string>
    <string name="please_choose_category">Please choose a category</string>
    <string name="unsupported_file_format">Unsupported file format</string>
    <string name="session_expired_login_again">Session expired. Please login again</string>
    <string name="initializing_dots">Initializing...</string>
    <string name="crop_image">Crop image</string>
    <string name="cropping_dots">Cropping...</string>
    <string name="crop">Crop</string>
    <string name="don_t_crop">Don\'t crop</string>
    <string name="cant_read_this_image">Cannot load this image</string>
    <string name="categories_updated_successfully">Categories updated successfully!</string>
    <string name="can_t_fetch_categories">Cannot fetch categories. Please try again later</string>
    <string name="loading_dots">Loading...</string>
    <string name="saving">Saving</string>
    <string name="reporting">Reporting</string>
    <string name="image_size_exeeds">Image size must be less than %1$d Kb</string>
    <string name="image_size_exeeds_in_mb">Image size must be less than %1$d Mb</string>
    <string name="can_t_load_image">Cannot load this image</string>
    <string name="send_feedback">Send feedback</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clearing_cache">Clearing cache</string>
    <string name="clear">Free up space</string>
    <string name="clear_cache_description">This app\'s caches will be cleared</string>
    <string name="do_you_want_to_clear_cache">Do you want to clear cache?</string>
    <string name="cache_cleared_successfully">Cache cleared successfully!</string>
    <string name="send">Send</string>
    <string name="enter_feedback">Enter feedback</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback!</string>
    <string name="save_without_watermark_for_x_hours">Save memes without watermark for the next %1$d hours (watch Ad)</string>
    <string name="can_t_show_ad">Cannot load Ad</string>
</resources>