<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dialogAddTextTopPadding"
    android:paddingBottom="@dimen/dialogAddTextTopPadding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <EditText
        android:id="@+id/addTextEditText"
        android:layout_width="0dp"
        android:layout_height="@dimen/createMemeAddTextETHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/dialog_addtext_bg_grey"
        android:layout_marginTop="@dimen/headerContentStartMargin"
        android:layout_marginLeft="@dimen/headerContentStartMargin"
        android:layout_marginRight="@dimen/headerContentStartMargin"
        android:gravity="start"
        android:hint="@string/enter_text"
        android:paddingLeft="@dimen/searchDescriptionEditTextPadding"
        android:paddingTop="@dimen/searchDescriptionEditTextPadding"
        />
    <Button
        android:id="@+id/addTextPositiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="@id/addTextEditText"
        app:layout_constraintTop_toBottomOf="@+id/addTextEditText"
        style="@style/Button.PositiveBorderLess"
        android:layout_marginTop="@dimen/addNewTextBtnMargin"
        />
    <Button
        android:id="@+id/addTextNegativeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/addTextPositiveBtn"
        app:layout_constraintTop_toBottomOf="@id/addTextEditText"
        android:layout_marginTop="@dimen/addNewTextBtnMargin"
        style="@style/Button.StateLessDarkBorderLess"
        />
    <Button
        android:id="@+id/addTextDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toStartOf="@+id/addTextNegativeBtn"
        app:layout_constraintTop_toBottomOf="@id/addTextEditText"
        android:layout_marginTop="@dimen/addNewTextBtnMargin"
        style="@style/Button.NegativeBorderLess"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>