<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/itemSpaceL"
    android:background="@color/headerBackground"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/dialogBorderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_border"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/headerContentStartMargin"

        />
    <TextView
        android:id="@+id/dialogBorderDummy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderTitle"
        android:layout_marginLeft="@dimen/headerContentStartMargin"
        android:layout_marginTop="@dimen/itemSpaceL"
        />
    <com.thugdroid.libs.myseekbar.BubbleSeekBar
        android:id="@+id/dialogBorderTopBsb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialogBorderDummy1"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderDummy1"
        android:layout_margin="@dimen/createMemeSliderMargin"
        app:bsb_second_track_color="@color/createMemeBsbSecondTrackColor"
        app:bsb_section_text_color="@color/createMemeBsbSectionTrackColor"
        app:bsb_track_color="@color/createMemeBsbTrackColor"
        app:bsb_section_text_position="below_section_mark"
        app:bsb_show_thumb_text="false"
        app:bsb_thumb_text_size="@dimen/createMemeThumbTextSize"
        app:bsb_bubble_text_size="@dimen/createMemeBubbleTextSize"
        app:bsb_section_text_size="@dimen/createMemeSectionTextSize"
        app:bsb_touch_to_seek="true"
        app:bsb_max="@integer/borderSizeBsbMax"
        app:bsb_auto_adjust_section_mark="true"
        app:bsb_section_count="@integer/borderSizeBsbSectionCount"
        />

    <TextView
        android:id="@+id/dialogBorderDummy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderTopBsb"
        android:layout_marginLeft="@dimen/headerContentStartMargin"
        android:layout_marginTop="@dimen/itemSpaceL"
        />
    <com.thugdroid.libs.myseekbar.BubbleSeekBar
        android:id="@+id/dialogBorderBottomBsb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialogBorderDummy2"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderDummy2"
        android:layout_margin="@dimen/createMemeSliderMargin"
        app:bsb_second_track_color="@color/createMemeBsbSecondTrackColor"
        app:bsb_section_text_color="@color/createMemeBsbSectionTrackColor"
        app:bsb_track_color="@color/createMemeBsbTrackColor"
        app:bsb_section_text_position="below_section_mark"
        app:bsb_show_thumb_text="false"
        app:bsb_thumb_text_size="@dimen/createMemeThumbTextSize"
        app:bsb_bubble_text_size="@dimen/createMemeBubbleTextSize"
        app:bsb_section_text_size="@dimen/createMemeSectionTextSize"
        app:bsb_touch_to_seek="true"
        app:bsb_max="@integer/borderSizeBsbMax"
        app:bsb_auto_adjust_section_mark="true"
        app:bsb_section_count="@integer/borderSizeBsbSectionCount"

        />

    <TextView
        android:id="@+id/dialogBorderDummy3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderBottomBsb"
        android:layout_marginLeft="@dimen/headerContentStartMargin"
        android:layout_marginTop="@dimen/itemSpaceL"
        />
    <com.thugdroid.libs.myseekbar.BubbleSeekBar
        android:id="@+id/dialogBorderLeftBsb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialogBorderDummy3"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderDummy3"
        android:layout_margin="@dimen/createMemeSliderMargin"
        app:bsb_second_track_color="@color/createMemeBsbSecondTrackColor"
        app:bsb_section_text_color="@color/createMemeBsbSectionTrackColor"
        app:bsb_track_color="@color/createMemeBsbTrackColor"
        app:bsb_section_text_position="below_section_mark"
        app:bsb_show_thumb_text="false"
        app:bsb_thumb_text_size="@dimen/createMemeThumbTextSize"
        app:bsb_bubble_text_size="@dimen/createMemeBubbleTextSize"
        app:bsb_section_text_size="@dimen/createMemeSectionTextSize"
        app:bsb_touch_to_seek="true"
        app:bsb_max="@integer/borderSizeBsbMax"
        app:bsb_auto_adjust_section_mark="true"
        app:bsb_section_count="@integer/borderSizeBsbSectionCount"
        />


    <TextView
        android:id="@+id/dialogBorderDummy4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderLeftBsb"
        android:layout_marginLeft="@dimen/headerContentStartMargin"
        android:layout_marginTop="@dimen/itemSpaceL"
        />
    <com.thugdroid.libs.myseekbar.BubbleSeekBar
        android:id="@+id/dialogBorderRightBsb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/dialogBorderDummy4"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderDummy4"
        android:layout_margin="@dimen/createMemeSliderMargin"
        app:bsb_second_track_color="@color/createMemeBsbSecondTrackColor"
        app:bsb_section_text_color="@color/createMemeBsbSectionTrackColor"
        app:bsb_track_color="@color/createMemeBsbTrackColor"
        app:bsb_section_text_position="below_section_mark"
        app:bsb_show_thumb_text="false"
        app:bsb_thumb_text_size="@dimen/createMemeThumbTextSize"
        app:bsb_bubble_text_size="@dimen/createMemeBubbleTextSize"
        app:bsb_section_text_size="@dimen/createMemeSectionTextSize"
        app:bsb_touch_to_seek="true"
        app:bsb_max="@integer/borderSizeBsbMax"
        app:bsb_auto_adjust_section_mark="true"
        app:bsb_section_count="@integer/borderSizeBsbSectionCount"
        />

    <Button
        android:id="@+id/dialogBorderPositiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textStyle="bold"
        style="@style/Button.PositiveBorderLess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderRightBsb"
        android:layout_marginTop="@dimen/itemSpaceXL"
        />
    <Button
        android:id="@+id/dialogBorderNegativeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textStyle="bold"
        style="@style/Button.StateLessDarkBorderLess"
        app:layout_constraintEnd_toStartOf="@id/dialogBorderPositiveBtn"
        app:layout_constraintTop_toBottomOf="@id/dialogBorderRightBsb"
        android:layout_marginTop="@dimen/itemSpaceXL"
        />

</androidx.constraintlayout.widget.ConstraintLayout>