<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reportTemplateDummy1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomSheetListItemHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tell_us_what_it_seems_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/reportTemplateDummy2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        layout="@layout/component_divider"
        app:layout_constraintTop_toBottomOf="@id/reportTemplateDummy1"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reportTemplateSpam"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomSheetListItemHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportTemplateDummy2"
        android:background="?attr/selectableItemBackground"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_s_spam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/reportTemplateDummy3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        layout="@layout/component_divider"
        app:layout_constraintTop_toBottomOf="@id/reportTemplateSpam"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reportTemplateInappropriate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomSheetListItemHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportTemplateDummy3"
        android:background="?attr/selectableItemBackground"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it_s_inappropriate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/reportTemplateDummy4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dividerHeight"
        layout="@layout/component_divider"
        app:layout_constraintTop_toBottomOf="@id/reportTemplateInappropriate"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reportTemplateCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomSheetListItemHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportTemplateDummy4"
        android:background="?attr/selectableItemBackground"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>