<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/selectRegionDummy1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_region"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/regionTitleMarginTop"
        android:textSize="@dimen/regionTitle"
        android:textColor="@color/textColorPrimary"
        android:layout_marginLeft="@dimen/headerContentStartMargin"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/selectRegionDummy2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_region_subtitle"
        app:layout_constraintStart_toStartOf="@id/selectRegionDummy1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectRegionDummy1"
        android:layout_marginTop="@dimen/itemSpaceM"
        android:layout_marginRight="@dimen/headerEndIconMargin"
        />

    <GridView
        android:id="@+id/regionsGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectRegionDummy2"
        app:layout_constraintBottom_toTopOf="@+id/selectRegionPositiveBtn"
        android:layout_margin="@dimen/headerContentStartMargin"
        android:horizontalSpacing="@dimen/regionGridHorizontalSpace"
        android:verticalSpacing="@dimen/regionGridVerticalSpace"
        android:numColumns="@integer/regionGridColumns"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noInternetConnectionParent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectRegionDummy2"
        app:layout_constraintBottom_toTopOf="@+id/selectRegionPositiveBtn"
        android:visibility="gone"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/somethingWentWrongParent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectRegionDummy2"
        app:layout_constraintBottom_toTopOf="@+id/selectRegionPositiveBtn"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/selectRegionPositiveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>