<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    >
    <View
        android:id="@+id/cropFragmentHeader"
        android:layout_width="0dp"
        android:layout_height="@dimen/headerHeight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Header"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cropFragmentBack"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/cropFragmentHeader"
        app:layout_constraintStart_toStartOf="@id/cropFragmentHeader"
        app:layout_constraintTop_toTopOf="@id/cropFragmentHeader"
        style="@style/Header.StartIcon"
        android:padding="@dimen/iconsPadding"
        android:background="?attr/selectableItemBackground"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_grey_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crop_image"
        app:layout_constraintStart_toStartOf="@id/cropFragmentHeader"
        app:layout_constraintEnd_toEndOf="@id/cropFragmentHeader"
        app:layout_constraintTop_toTopOf="@id/cropFragmentHeader"
        app:layout_constraintBottom_toBottomOf="@id/cropFragmentHeader"
        style="@style/Header.Title"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cropFragmentHeader"
        app:layout_constraintBottom_toTopOf="@id/cropFragmentPositiveBtn"
        android:background="@color/memeImageParentBg"
        >
        <com.thugdroid.libs.simplecrop.CropImageView
            android:id="@+id/cropFragmentMainImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/cropImageMargin"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/cropImageProgressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cropFragmentHeader"
        app:layout_constraintBottom_toTopOf="@id/cropFragmentPositiveBtn"
        android:layout_margin="20dp"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/cropFragmentPositiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Button.PositiveBorderLess"
        android:layout_margin="@dimen/itemSpaceM"
        />
    <Button
        android:id="@+id/cropFragmentDontCropBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_crop"
        app:layout_constraintEnd_toStartOf="@id/cropFragmentPositiveBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Button.StateLessDarkBorderLess"
        android:layout_margin="@dimen/itemSpaceM"
        />
</androidx.constraintlayout.widget.ConstraintLayout>